# opensiddur-ai

./: .coveragerc  .gitignore  CHANGELOG.md  COMPILER_SPECIFICATION.md  README.md  RELEASING.md  codecov.yml  pyproject.toml
.github/workflows/: tests.yml
doc/: exporter-settings.example.yaml
opensiddur/: TODO.md
opensiddur/common/: __init__.py  constants.py  xslt.py
opensiddur/converters/1917jps/: README.md  prepare.py  title_page.py
opensiddur/converters/agent/: README.md  agent.ipynb  common.py  diff_fix.py  project_header.py  source_file.py  text_encoding_agent.py  tools.py  util.py  xml_linter.py
opensiddur/converters/jps1917/: 1917jps.py  README.md  book.xslt  convert_wikisource.py  jps1917_tag_analysis.json  jps1917_template_analysis.json  llms.ipynb  mediawiki_processor.py  mediawiki_to_tei.xslt  processor_summary.md  template_finder.py  test_processor.py  wikisource.py
opensiddur/converters/util/: prettify.py  transformer.py  validation.py  xslt.py
opensiddur/converters/wlc/: README.md  download_tanach.py  transform_book.xslt  transform_index.xslt  wlc.py
opensiddur/exporter/: README.md  cache.py  compiler.py  condition_eval.py  conditional_settings.py  constants.py  derivation_graph.py  derived_settings.py  external_compiler.py  inline_compiler.py  linear.py  marker_reconstruct.py  refdb.py  settings.py  unflatten.py  urn.py  validate_urn_references.py
opensiddur/exporter/calendar/: __init__.py  compute.py
opensiddur/exporter/pdf/: pdf.py
opensiddur/exporter/tex/: bibtex.xslt  install-tex.sh  jlptei-to-xelatex.xsl  latex.py  marker_reconstruct.py  reledmac.xslt  xelatex.py  xelatex.xslt
opensiddur/importer/agent/: agent.ipynb  checkpoint_example.py  common.py  diff_fix.py  example_usage.py  llms.ipynb  test_agent.py  text_encoding_agent.py  tools.py  xml_linter.py
opensiddur/importer/jps1917/: 1917jps.py  README.md  convert_wikisource.py  mediawiki_processor.py  mediawiki_to_tei.xslt  processor_summary.md  template_finder.py  test_processor.py  wikisource.py
opensiddur/importer/miqra_al_pi_hamasorah/: README.md  convert_tsv.py  download.py  miqra_to_tei.xslt  miqra_wikitext.py
opensiddur/importer/util/: constants.py  mediawiki_processor.py  pages.py  prettify.py  transformer.py  validation.py
opensiddur/importer/wlc/: README.md  download_tanach.py  transform_book.xslt  transform_index.xslt  wlc.py
opensiddur/tests/common/: test_xslt.py
opensiddur/tests/exporter/: __init__.py  test_alignment.py  test_cache.py  test_calendar_compute.py  test_compiler.py  test_condition_eval.py  test_conditional_integration.py  test_conditional_settings.py  test_derived_settings.py  test_external_compiler.py  test_inline_compiler.py  test_latex.py  test_marker_reconstruct.py  test_parallel_compiler.py  test_parallel_e2e.py  test_parallel_settings.py  test_pdf.py  test_refdb.py  test_reledmac_xslt.py  test_settings.py  test_unflatten.py  test_urn.py  test_validate_urn_references.py  test_xelatex.py
opensiddur/tests/fixtures/: miqra_minimal.xlsx
opensiddur/tests/importer/jps1917/: test_convert_wikisource.py  test_mediawiki_processor.py  test_template_finder.py
opensiddur/tests/importer/miqra_al_pi_hamasorah/: test_convert_tsv.py  test_download.py  test_miqra_wikitext.py
opensiddur/tests/importer/util/: test_pages.py  test_prettify.py  test_validation.py
opensiddur/tests/importer/wlc/: test_transform_book.py  test_transform_index.py  test_wlc.py
opensiddur/tests/schema/: test_jlptei_odd.py
schema/: JLPTEI-3.md  jlptei.odd.xml
scripts/: build-schema.sh  tei-stylesheets.sh  tei-to-pdf.sh
scripts/schxslt2/: transpile.xsl
tests/: test_wlc_index_transformer.py  test_wlc_transformer.py  test_xml_transformer.py
