[project]
name = "opensiddur-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Efraim Feinstein",email = "efraim.feinstein@gmail.com"}
]
license = {text = "LGPL 3+"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
package-mode = false

[tool.poetry]
name = "opensiddur-ai"
version = "0.1.0"
description = ""
authors = ["Efraim Feinstein <efraim.feinstein@gmail.com>"]
packages = [
    { include = "opensiddur" }
]
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
requests = "^2.32.4"
lxml = "^5.3.0"
saxonche = "^12.7.0"
mwparserfromhell = "^0.7.2"
openai = "^1.101.0"
langgraph = "^0.6.6"
langchain = "^0.3.27"
langchain-openai = "^0.3.32"
langchain-community = "^0.3.29"
chromadb = "^1.0.20"
unstructured = "^0.18.14"
markdown = "^3.9"
langgraph-supervisor = "^0.0.29"
pyppeteer = "^2.0.0"
diff-match-patch = "^20241021"
pydantic = "^2.11.7"

[tool.poetry.group.dev.dependencies]
poetry = "^1.0.0"
ipykernel = "^6.30.1"
coverage = "^7.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
